# fx_cli_lib

./: .gitignore  CMakeLists.txt  LICENSE  __init__.py  fx_client.cpp  fx_client.h  install.sh  pybind_module.cpp
docs/: API.md  DEVELOPER.md  Install.md  README.md  RobotConfig.md
example/: client_example.cpp  client_example.py  control_test.py  mcu_test.py  motor_setzero_test.py  packet_transmit_test.py  req_status_test.py  req_test.py  throttle.py
leagacy/: fx_client_legacy.cpp  fx_client_legacy.h
utils/: elapsed_timer.cpp  elapsed_timer.h  elapsed_timer_rt.h
